--- a/src/style/_var.scss
+++ b/src/style/_var.scss
@@ -1,5 +1,5 @@
-// $authWidth: 190px;
-// $bordRadius: 20px;
+$mobile: 600px;
+$tablet: 940px;
 
 //fonts
 $RoboTh-12: 100 12px 'Roboto', sans-serif;
