--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -9,6 +9,7 @@
 		<li class="footer-menu__item"><a href="#" class="footer-menu__link">Вопросы и ответы</a></li>
 	</ul>
 	<div class="contacts">
+		<a class="contacts__tel contacts__tel--footer hidden" href="tel:+88005553377">8 800 555-33-77</a>
 		<a class="contacts__tel contacts__tel--footer" href="tel:+88003336799">8 800 333 67 99</a>
 		<a class="contacts__email" href="mailto:nfo@credeo.ru">nfo@credeo.ru</a>
 	</div>
