--- a/src/template/main.html
+++ b/src/template/main.html
@@ -103,17 +103,17 @@
 		<h1 class="title">Погашение</h1>
 		<span class="title__line"></span>
 		<div class="repayment__block">
-			<div class="question">
+			<a href="#" class="question">
 				<div class="question__text">Как<br>погасить?</div>
 				<div class="question__line"></div>
-			</div>
-			<div class="question question--2nd">
+			</a>
+			<a href="#" class="question question--2nd">
 				<div class="question__text question__text--2nd">Как уточнить и дату<br>сумму платежа</div>
 				<div class="question__line"></div>
-			</div>
-			<div class="question question--3rd">
+			</a>
+			<a href="#" class="question question--3rd">
 				<div class="question__text question__text--3rd">Досрочное погашение</div>
-			</div>
+			</a>
 		</div>
 		<p class="repayment__info">Погасить займ вы можете в своем личном кабинете, выбрав удобный для Вас способ.</p>
 		<div class="repayment__way">
