--- a/src/style/partials/_main.scss
+++ b/src/style/partials/_main.scss
@@ -10,6 +10,10 @@ main{
 	text-transform: uppercase;
 	text-align: center;
 
+	@include respond-to(mobile) {
+		font: $RoboL-24;
+	}	
+
 	&__line{
 		display: block;
 		height: 0;
@@ -28,7 +32,12 @@ main{
 		display: inline-block;
 		vertical-align: top;
 		width: 33.333333333333336%;
-		padding: 0 5% 0 0%;
+		padding: 0 5% 0 0;
+
+		@include respond-to(mobile) {
+			width: 50%;
+			padding: 0 3% 0 3%;
+		}
 
 		&--card{
 			padding: 0 2% 0 3%;
@@ -36,10 +45,16 @@ main{
 
 		&--right{
 			padding: 0 0 0 4%;
+			@include respond-to(mobile) {
+				padding: 0 3% 0 3%;
+			}
 		}
 
 		&--pen{
 			padding: 0 8% 0 0;
+			@include respond-to(mobile) {
+				padding: 0 3% 0 3%;
+			}
 		}
 
 		&--calendar{
@@ -53,6 +68,10 @@ main{
 		color: $grayText;
 		text-align: center;
 
+		@include respond-to(mobile) {
+			font: $RoboR-16;
+		}
+
 		&--low{
 			margin: 0 0 22px;
 		}
@@ -63,6 +82,10 @@ main{
 		color: $grayText;
 		text-align: center;
 		line-height: 22px;
+
+		@include respond-to(mobile) {
+			font: $RoboL-16;
+		}
 	}
 
 	&__picture{
