--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -14,7 +14,7 @@
 		<a class="contacts__email" href="mailto:nfo@credeo.ru">nfo@credeo.ru</a>
 	</div>
 	<div class="copyright">Банковские услуги по выпуску и обслуживанию банковских картр Visa &nbsp;&#171;CREDEO&#187;&nbsp; оказывает компанией &#171;КРЕДЕО&#187;&nbsp; (ООО), ЩГРН 1127746337685.</div>
-	<a href="#anchor" class="transition transition--footer">
+	<a href="#home" class="transition transition--footer">
 		<div class="pointer pointer--up"></div>
 	</a>
 </div>
