--- a/src/template/main.html
+++ b/src/template/main.html
@@ -1,7 +1,6 @@
 <div class="container">
 	<section>
 		<h1 class="title" id="anchor">Наши преимущества</h1>
-		<span class="title__line"></span>
 		<ul class="advantages">
 			<li class="advantages__item">
 				<div class="advantages__picture advantages__picture--hands"></div>
@@ -37,7 +36,6 @@
 	</section>
 	<section class="credit-rating">
 		<h1 class="title">Ваш кредитный рейтинг</h1>
-		<span class="title__line"></span>
 		<div class="rating">
 			<p class="rating__text">Кредитный рейтинг это оценка, основанная на Вашей кредитной истории и персональных данных, обработанная в скоринговой системе. Оценка позволяет нам предложить Вам индивидуальные кредитные условия. Чем выше кредитный рейтинг, тем более привлекательные условия мы готовы предоставить.</p>
 			<ul class="ratinginfo">
@@ -64,7 +62,6 @@
 	</section>
 	<section class="service-section">
 		<h1 class="title">Сервис кредео</h1>
-		<span class="title__line"></span>
 		<div class="service">
 			<div class="service__img decrease"></div>
 			<div class="service__info">
@@ -83,7 +80,6 @@
 	</section>
 	<section class="howItWork">
 		<h1 class="title">Как это работает?</h1>
-		<span class="title__line"></span>
 		<div class="howItWork__img">
 			<img src="img/howItWork.jpg" alt="how it work">
 		</div>
@@ -101,15 +97,14 @@
 	</section>
 	<section class="repayment">
 		<h1 class="title">Погашение</h1>
-		<span class="title__line"></span>
 		<div class="repayment__block">
 			<a href="#" class="question">
 				<div class="question__text">Как<br>погасить?</div>
-				<div class="question__line"></div>
+				<!-- <div class="question__line"></div> -->
 			</a>
 			<a href="#" class="question question--2nd">
 				<div class="question__text question__text--2nd">Как уточнить и дату<br>сумму платежа</div>
-				<div class="question__line"></div>
+				<!-- <div class="question__line"></div> -->
 			</a>
 			<a href="#" class="question question--3rd">
 				<div class="question__text question__text--3rd">Досрочное погашение</div>
