--- a/src/style/partials/_main.scss
+++ b/src/style/partials/_main.scss
@@ -4,7 +4,7 @@ main{
 }
 
 .title{
-	margin: 77px 0 25px 10px;
+	margin: 77px 0 0 10px;
 	font: $RoboL-38;
 	color: $grayText;
 	text-transform: uppercase;
@@ -14,14 +14,13 @@ main{
 		font: $RoboL-24;
 	}	
 
-	&__line{
+	&:after{
+		content: '';
 		display: block;
 		height: 0;
 		border-top: $blueLine;
 		width: 289px;
-		margin: 0 auto;
-		position: relative;
-		left:-13px;
+		margin: 25px auto 0;
 	}
 }
 
@@ -132,7 +131,11 @@ main{
 	font-size: 0;
 
 	.title{
-		margin: 111px 0 22px 8px;
+		margin: 111px 0 0 8px;
+
+		&:after{
+			margin-top:22px; 
+		}
 	}
 }
 .rating{
@@ -236,7 +239,10 @@ main{
 	font-size: 0;
 
 	.title{
-		margin: 88px 0 20px 8px;
+		margin: 88px 0 0px 8px;
+		&:after{
+			margin-top:19px;
+		}
 	}
 }
 
@@ -338,7 +344,10 @@ main{
 	font-size: 0;
 
 	.title{
-		margin: 110px 0 20px 8px;
+		margin: 112px 0 0 8px;
+		&:after{
+			margin-top:19px;
+		}
 	}
 	
 	&__info{
@@ -427,7 +436,11 @@ main{
 	margin: 106px 0 0;
 
 	.title{
-		margin: 4px 0 19px 0;
+		margin: 4px 0 0 0;
+
+		&:after{
+			margin-top:19px;
+		}
 	}
 
 	&__block{
@@ -442,6 +455,7 @@ main{
 		display: inline-block;
 		vertical-align: top;
 		width: 27%;
+		position: relative;
 
 		@include respond-to(tablet) {
 			width: 30%;
@@ -452,6 +466,26 @@ main{
 			display: block;
 			margin: 0 auto 20px;
 			text-align: center;
+		}
+
+		&:after{
+			content: '';
+			width: 1px;
+			height: 115px;
+			display: inline-block;
+			background-color: $lineBg;
+			-ms-transform: rotate(30deg); /* IE 9 */
+		    -webkit-transform: rotate(30deg); /* Chrome, Safari, Opera */
+		    transform: rotate(30deg);
+		    top: 0;
+		    right: 0;
+
+		    @include respond-to(tablet) {
+				height: 90px;
+			}
+			@include respond-to(mobile) {
+				display: none;
+			}
 		}	
 
 		&--2nd{
@@ -471,6 +505,10 @@ main{
 		&--3rd{
 			width: 33%;
 
+			&:after{
+				display: none;
+			}
+
 			@include respond-to(tablet) {
 				width: 29%;
 			}
@@ -482,22 +520,7 @@ main{
 			}	
 		}
 
-		&__line{
-			width: 1px;
-			height: 115px;
-			display: inline-block;
-			background-color: $lineBg;
-			-ms-transform: rotate(30deg); /* IE 9 */
-		    -webkit-transform: rotate(30deg); /* Chrome, Safari, Opera */
-		    transform: rotate(30deg);
-
-		    @include respond-to(tablet) {
-				height: 90px;
-			}
-			@include respond-to(mobile) {
-				display: none;
-			}
-		}
+		
 
 		&__text{
 			font: $RoboL-24;
