--- a/src/template/header.html
+++ b/src/template/header.html
@@ -18,7 +18,7 @@
 			</ul>
 		</nav>
 		<div class="logo">
-			<a href="#" class="logo__link"></a>
+			<a href="#" class="logo__link" id="home"></a>
 		</div>
 		<a class="contacts__tel" href="tel:+88005553377">8 800 555-33-77</a>
 		<ul class="hor-menu">
